# twig

./: .gitignore  Cargo.toml
codegen/: Cargo.toml
codegen/src/: builtins.rs  definitions.rs  lib.rs  operation.rs
grammars/: update_grammars.sh
module-test/: Cargo.toml
module-test/src/: main.rs
modules/: module-test.wat  twig.wat
parser/: Cargo.toml
parser/src/: lib.rs
src/: frontend.rs  jit.rs  lexer.rs  main.rs  module.rs  parser.rs  ts.rs  wamr.rs
src/frontend/: comparator.rs  expression.rs  frontend_grammar.rs  frontend_language.rs  grammars.rs  literal.rs  mod.rs  nfa.rs  operator.rs  parse_grammar.rs  rules.rs  statement.rs  types.rs
src/middleware/: mod.rs  statement.rs
tests/: tests.rs
