[package]
name = "twig"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version="1.0", features=["derive"] }
crossterm = "0.26"
cranelift = "0.92"
cranelift-module = "0.92"
cranelift-jit = "0.92"
tree-sitter = "0.20"
tree-sitter-commonlisp = "0.3"
smallbitvec = "2.5.1"
